# grpc-llama.cpp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  build-args.cmake  build.sh  client.cpp  server.cpp
protos/: llm.proto
